--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "clawguard",
+  "name": "clawscan",
   "version": "1.0.0",
   "description": "Security scanner for OpenClaw skills — detect malicious patterns before installing",
   "type": "module",
   "main": "src/cli.js",
   "bin": {
-    "clawguard": "./src/cli.js"
+    "clawscan": "./src/cli.js"
   },
   "scripts": {
     "start": "node src/cli.js",
